--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="boxterm">zu0t</div> <!--Your username-->
         <div class="info">Account <b>zu0t</b> is not termed. You can contact me below.</div> <!--change inside <b> to your username--> 
         <div class="boxvisit"><a href="https://discord.com/users/437532245574680577">Open Profile</a></div> <!--Chnage the link to your profile (https://discord.com/users/userID)-->
-    <div class="ad">Want your own? Source code: <b><a href="https://github.com/zu0t/TermedBio" class="ad">HERE</a></b></div>
+    <!--DO NOT REMOVE!!!--><div class="ad">Want your own? Source code: <b><a href="https://github.com/zu0t/TermedBio" class="ad">HERE</a></b></div><!--DO NOT REMOVE!!!-->
     </div>
-    <div class="bottom">Made by zu0t: <a href="https://github.com/zu0t" class="ad1">Github</a> / <a href="https://discord.com/users/437532245574680577" class="ad1">Discord</a> / <a href="https://ko-fi.com/zuot_" class="ad1">Donate</a></div>
+    <!--DO NOT REMOVE!!!--><div class="bottom">Made by zu0t: <a href="https://github.com/zu0t" class="ad1">Github</a> / <a href="https://discord.com/users/437532245574680577" class="ad1">Discord</a> / <a href="https://ko-fi.com/zuot_" class="ad1">Donate</a></div><!--DO NOT REMOVE!!!-->
 </body>
 </html>
 <!--SITE MADE BY:
