--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet">
-    <title>Termed by zuot.cc</title> 
+    <title>TermedBio.xyz</title> 
 </head>
 <body>
     <div class="ramecek">
         <div class="title">Not Termed</div> <!--Change if you get termed-->
-        <div class="boxterm">zu0t</div> <!--Your username-->
-        <div class="info">Account <b>zu0t</b> is not termed. You can contact me below.</div> <!--change inside <b> to your username--> 
-        <div class="boxvisit"><a href="https://discord.com/users/437532245574680577">Open Profile</a></div> <!--Chnage the link to your profile (https://discord.com/users/userID)-->
+        <div class="boxterm">Your Name</div> <!--Your username-->
+        <div class="info">Account <b>Your Name</b> is not termed. You can contact me below.</div> <!--change inside <b> to your username--> 
+        <div class="boxvisit"><a href="https://discord.com/users/userID">Open Profile</a></div> <!--Chnage the link to your profile (https://discord.com/users/userID)-->
     <!--DO NOT REMOVE!!!--><div class="ad">Want your own? Source code: <b><a href="https://github.com/zu0t/TermedBio" class="ad">HERE</a></b></div><!--DO NOT REMOVE!!!-->
     </div>
     <!--DO NOT REMOVE!!!--><div class="bottom">Made by zu0t: <a href="https://github.com/zu0t" class="ad1">Github</a> / <a href="https://discord.com/users/437532245574680577" class="ad1">Discord</a> / <a href="https://ko-fi.com/zuot_" class="ad1">Donate</a></div><!--DO NOT REMOVE!!!-->
